// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home actions should match snapshot for pure object actions 1`] = `
Object {
  "type": "HOME_SHOW_REQUEST_INVITE_DIALOG",
}
`;

exports[`Home actions should match snapshot for pure object actions 2`] = `
Object {
  "type": "HOME_DISMISS_REQUEST_INVITE_DIALOG",
}
`;
